src/objects/APITemplateFieldMapping__c.object
<CustomObject>
    <fields>
        <fullName>APITemplate__c</fullName>
        <label>API Template</label>
        <referenceTo>APITemplate__c</referenceTo>
        <relationshipLabel>API Template Fields</relationshipLabel>
        <relationshipName>APITemplateFieldMapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <inlineHelpText>If the value of Salesforce field is null. The default value will be applied.</inlineHelpText>
        <label>Default Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalFieldName__c</fullName>
        <inlineHelpText>External field that will be linked to the Salesforce. eg. ci</inlineHelpText>
        <label>External Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceFieldAPIName__c</fullName>
        <inlineHelpText>API Name of the field in Salesforce eg. OtherEmail__c</inlineHelpText>
        <label>Salesforce Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>API Template Field Mapping</label>
    <nameField>
        <label>API Template Field Mapping Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Template Fields Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>